Füge Mediator-Framework hinzu und aktualisiere Pakete
Das Projekt wurde um ein neues Mediator-Framework erweitert, das die Verarbeitung von Signalen und die Registrierung von Handlern ermöglicht.
- Neue Schnittstellen (`IMediatorService`, `ISignalHandler<T>`) und Klassen (`MediatorService`, `MediatorRegisterUtility`, `MediatorOptionsBuilder`) hinzugefügt.
- Methoden zur Konfiguration und Registrierung des Mediators (`AddMediator`, `ConfigureMediator`) implementiert.
- Unit-Tests für Mediator-Komponenten hinzugefügt.
- Paketabhängigkeiten aktualisiert, einschließlich NUnit-Testpakete und Microsoft.Extensions.*.
- `.editorconfig`-Datei hinzugefügt, um den Code-Stil zu standardisieren.
- Neue Ordnerstruktur in der Lösung definiert (`/Documents/`, `/Nuget/`).

--- a/source/Pandora.Extensions.Mediator/src/Pandora.Extensions.Mediator.csproj
+++ b/source/Pandora.Extensions.Mediator/src/Pandora.Extensions.Mediator.csproj
@@ -7,4 +7,10 @@
 		<Nullable>enable</Nullable>
 		<LangVersion>default</LangVersion>
 	</PropertyGroup>
+	<ItemGroup>
+		<Folder Include="Extensions\Mediator\Builder\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Pandora.Extensions.Mediator.Abstraction\src\Pandora.Extensions.Mediator.Abstraction.csproj" />
+	</ItemGroup>
 </Project>
