--- a/source/Pandora.Extensions.Mediator.Abstraction/src/Pandora.Extensions.Mediator.Abstraction.csproj
+++ b/source/Pandora.Extensions.Mediator.Abstraction/src/Pandora.Extensions.Mediator.Abstraction.csproj
@@ -7,4 +7,7 @@
 		<Nullable>enable</Nullable>
 		<LangVersion>default</LangVersion>
 	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions"/>
+	</ItemGroup>
 </Project>
